--- a/dia dos namorados/index.html
+++ b/dia dos namorados/index.html
@@ -97,8 +97,8 @@
                 <img src="fotos/acampamento4.jpg" alt="Acampamento">
                 <img src="fotos/acampamento5.jpg" alt="Acampamento">
                 <p>olha se 1h e meia dentro do carro para guarapari foi muito aqui foi brincadeira</p>
-                <p>tirando que o carace tava la para estragar essa viagem, eu amei cada coisa que aconteceu
-                    nessa viagem, dormir dentro da barraca e alagar, transar na praia 1º vez pra nunca mais
+                <p>tirando que o careca tava la para estragar essa viagem, eu amei cada coisa que aconteceu
+                    nessa viagem, dormir dentro da barraca e alagar, a vez na praia 1º pra nunca mais
                     dormir na carro num calor da porra, deitar na areia da praia no breu da noite so para 
                     aproveitar a vista das estrelas ao lado da minha estrela.</p>
             </div>
@@ -175,4 +175,4 @@
         // Você pode adicionar JavaScript aqui para funcionalidades mais interativas
     </script>
 </body>
-</html>c
+</html>
