--- a/dia dos namorados/index.html
+++ b/dia dos namorados/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dia Dos Namorados</title>
+    <title>Dia dos Namorados</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -20,102 +20,106 @@
 
     <header>
         <h1>Para Isabela, a mulher mais linda deste mundo</h1>
-        <p>Site feito para apresentar meu amor por você.</p>
+        <p>apenas uma recordação dos melhores momentos da minha vida ao lado da melhor pessoa da minha vida.</p>
     </header>
-   <section id="contador-dias">
-  <h2 data-aos="fade-down">Quantos Dias Juntos?</h2>
-  <div class="contador-box" data-aos="zoom-in">
-    <p id="contador"></p>
-  </div>
+
+    <section id="contador-dias">
+        <h2 data-aos="fade-down">Quanto tempo juntos?</h2>
+        <div class="contador-box" data-aos="zoom-in">
+            <p id="contador"></p>
+        </div>
     </section>
 
-
     <main>
-       <section id="linha-do-tempo">
+        <section id="linha-do-tempo">
             <h2>Momentos</h2>
+
             <div class="marco">
                 <div class="data">14/10/2024</div>
                 <img src="fotos/primeiro-encontro.jpg" alt="Primeiro Encontro">
-                <p>a essa altura eu ja estava completamente bobo por você</p>
-                <p>é incrivel como em pouco tempo vc mudou tudo em mim.</p>
+                <p>Nessa altura eu já estava completamente bobo por você.</p>
+                <p>É incrível como, em pouco tempo, você mudou tudo em mim.</p>
             </div>
+
             <div class="marco">
                 <div class="data">01/11/2024</div>
-                <img src="fotos/primeira-vez.jpg" alt="Primeira de sei la quantas kkk">
-                <p>Bem esse dia tras memorias, as vezes traumatizantes as vezes engraçadas kkk.</p>
-                <p>tadinho do Miguel kkkkkk.</p>
+                <img src="fotos/primeira-vez.jpg" alt="Primeira de sei lá quantas kkk">
+                <p>Bem, esse dia traz memórias — às vezes traumatizantes, às vezes engraçadas kkk.</p>
+                <p>Tadinho do Miguel kkkkkk.</p>
             </div>
+
             <div class="marco">
                 <div class="data">16/11/2024</div>
-                <img src="fotos/f1_1.jpg" alt="f1 apenas isso">
-                <img src="fotos/f1_2.jpg" alt="f1 apenas isso">
-                <img src="fotos/f1_3.jpg" alt="f1 apenas isso">
-                <p>ir ate a praia so para comer um churros, f1 e beber uma caipirinha</p>
-                <p>Sdds de fazer bobeira assim.</p>
+                <img src="fotos/f1_1.jpg" alt="F1 apenas isso">
+                <img src="fotos/f1_2.jpg" alt="F1 apenas isso">
+                <img src="fotos/f1_3.jpg" alt="F1 apenas isso">
+                <p>Ir até a praia só para comer um churros,F1 e beber uma caipirinha.</p>
+                <p>Saudades de fazer bobeira assim.</p>
             </div>
-             <div class="marco">
+
+            <div class="marco">
                 <div class="data">24/11/2024</div>
-                <img src="fotos/brigadeiro-1.jpg" alt="bem nem falo nada a foto ja diz por si so">
-                <img src="fotos/brigadeiro-2.jpg" alt="bem nem falo nada a foto ja diz por si so">
-                <p>bem não tem oq dizer desse dia alem de lembrar dele toda vez</p>
-                <p>todos os acontecimentos que eu lembro em pontos apenas  rir e lembrar</p>
-                <p>-Dri golfinho (Isa) </p>
-                <p>-Pé sengrando (Caio)</p>
-                <p>-corpo mole (Isa)</p>
-                <p>-ver em terceira pessoa (Caio)</p>
-                <p>-cabeça presa no sofa (Caio)</p>
-                <p>-esquecer que namora comigo (Isa)</p>
-                <p>-achar que te trocando de dimensão na cozinha (Caio)</p>
-                <p>-badtrip de ver o NÃO CITADO (Isa)</p>
-                <p>-badtrip de achar que ia morrer na cama (Caio)</p>
-                <p>-muito mais coisas que minha mente não guardou</p>
+                <img src="fotos/brigadeiro-1.jpg" alt="A foto já diz por si só">
+                <img src="fotos/brigadeiro-2.jpg" alt="A foto já diz por si só">
+                <p>Bem, não tem o que dizer desse dia além de lembrar dele toda vez.</p>
+                <p>Todos os acontecimentos me fazem apenas rir e lembrar:</p>
+                <p>- Dri golfinho (Isa)</p>
+                <p>- Pé sangrando (Caio)</p>
+                <p>- Corpo mole (Isa)</p>
+                <p>- Me ver em terceira pessoa (Caio)</p>
+                <p>- Cabeça presa no sofá (Caio)</p>
+                <p>- Esquecer que namora comigo (Isa)</p>
+                <p>- Achar que estava trocando de dimensão na cozinha (Caio)</p>
+                <p>- Bad trip de ver o NÃO CITADO (Isa)</p>
+                <p>- Bad trip de achar que ia morrer na cama (Caio)</p>
+                <p>- E muito mais coisas que minha mente não guardou</p>
             </div>
+
             <div class="marco">
                 <div class="data">10/12/2024</div>
                 <img src="fotos/flores.jpg" alt="Flores">
-                <p>Bem se na primera vez que fomos no shopping eu ja estava apixonado</p>
-                <p>aqui eu consagrei e te mostrei com algo que dura pouco para demostrar o tanto que te amo</p>
-                <p>talvez nem uma flor eterna consegue expressar meu amor por você.</p>
+                <p>Bem, se na primeira vez que fomos ao shopping eu já estava apaixonado...</p>
+                <p>Aqui eu consagrei e te mostrei que, com algo que dura pouco tempo, consigo demonstrar todo meu amor por você.</p>
+                <p>Na verdade, nem uma flor eterna consegue expressar meu amor por você.</p>
             </div>
+
             <div class="marco">
                 <div class="data">12/12/2024</div>
-                <img src="fotos/formatura.jpg" alt="foramtura">
-                <p>te avisei em cima da hora que era para você ir mas no fim eu fico muito feliz</p>
-                <p>te ter uma foto na minha formatura de ensino medio com a mulher
-                    que eu prometo que vou fazer de tudo para estar comigo o resto da vida.</p>
-                    <p>obrigado por estar comigo em todos os momentos meu Amor</p>
+                <img src="fotos/formatura.jpg" alt="Formatura">
+                <p>Te avisei em cima da hora que era para você ir, mas no fim eu fico muito feliz</p>
+                <p>de ter uma foto na minha formatura do ensino médio com a mulher
+                que eu prometo que vou fazer de tudo para estar comigo o resto da vida.</p>
+                <p>Obrigado por estar comigo em todos os momentos, meu amor.</p>
             </div>
+
             <div class="marco">
                 <div class="data">28/12/2024 a 31/12/2024</div>
-                <img src="fotos/Viagem.jpg" alt="guarapari">
-                <img src="fotos/Viagem2.jpg" alt="guarapari">
-                <img src="fotos/Viagem3.jpg" alt="guarapari">
-                <img src="fotos/ano_novo.jpg" alt="ano novo">
-
-                <p>aguentar vc por 1H e meia dentro do carro lotado ate guarapari pqp</p>
-                <p>mas tudo que aconteceu la me deixa feliz, mesmo que meu celular tenha quebrado a tela la kkkkk</p>
-                <p>mesmo a nossa foto tenha ficado com 1 mizero fogo de artificios kkkkkkkk.</p>
+                <img src="fotos/Viagem.jpg" alt="Guarapari">
+                <img src="fotos/Viagem2.jpg" alt="Guarapari">
+                <img src="fotos/Viagem3.jpg" alt="Guarapari">
+                <img src="fotos/ano_novo.jpg" alt="Ano novo">
+                <p>Aguentar você por 1h e meia dentro do carro lotado até Guarapari... pqp.</p>
+                <p>Mas tudo que aconteceu lá me deixa feliz, mesmo que meu celular tenha quebrado a tela lá kkkkk.</p>
+                <p>Mesmo a nossa foto tendo ficado com um mísero fogo de artifício kkkkkkkk.</p>
             </div>
+
             <div class="marco">
                 <div class="data">01/03/2025 a 04/03/2025</div>
-            </div>
                 <img src="fotos/acampamento1.jpg" alt="Acampamento">
                 <img src="fotos/acampamento2.jpg" alt="Acampamento">
                 <img src="fotos/acampamento3.jpg" alt="Acampamento">
                 <img src="fotos/acampamento4.jpg" alt="Acampamento">
                 <img src="fotos/acampamento5.jpg" alt="Acampamento">
-                <p>olha se 1h e meia dentro do carro para guarapari foi muito aqui foi brincadeira</p>
-                <p>tirando que o careca tava la para estragar essa viagem, eu amei cada coisa que aconteceu
-                    nessa viagem, dormir dentro da barraca e alagar, a vez na praia 1º pra nunca mais
-                    dormir na carro num calor da porra, deitar na areia da praia no breu da noite so para 
+                <p>Se 1h e meia no carro para Guarapari foi muito, aqui foi brincadeira.</p>
+                <p>Tirando que o careca estava lá para estragar a viagem, eu amei cada coisa que aconteceu:
+                    dormir dentro da barraca e alagar, a 1ª vez na praia (pra nunca mais),
+                    dormir no carro num calor da porra, deitar na areia da praia no breu da noite só para 
                     aproveitar a vista das estrelas ao lado da minha estrela.</p>
             </div>
-
-            
         </section>
 
         <section id="galeria">
-            <h2>apenas momentos Inesquecíveis que tenho com você</h2>
+            <h2>Apenas momentos inesquecíveis que tenho com você</h2>
             <div class="galeria-container">
                 <img src="fotos/foto1.jpg" alt="Foto 1">
                 <img src="fotos/foto2.jpg" alt="Foto 2">
@@ -126,20 +130,20 @@
                 <img src="fotos/foto7.jpg" alt="Foto 7">
                 <img src="fotos/foto8.jpg" alt="Foto 8">
             </div>
-            <p>apenas essas fotos não conseguem mostrar todos os momentos maravilhosos que eu presenciei ao seu lado</p>
+            <p>Essas fotos não conseguem mostrar todos os momentos maravilhosos que eu vivi ao seu lado.</p>
         </section>
-        <section d="razoes">
-            <h2>Agumas Razões Pelas Quais Te Amo</h2>
+
+        <section id="razoes">
+            <h2>Algumas Razões pelas Quais Te Amo</h2>
             <ul>
-                <li>Você me  faz sentir importante na vida de alguem.</li>
+                <li>Você me faz sentir importante na vida de alguém.</li>
                 <li>O jeito que você se sente livre perto de mim para fazer qualquer coisa.</li>
-                <li>Você me ajuda a melhorar como pessoa não importa como.</li>
-                <li>Posso contar com você não importa oq tiver acontecendo</li>
-                <li>Mesmo eu pisando na bola muitas vezes e eu entendo isso, você me perdoa e entende que eu vou melhorar por você e isso é adimiravel</li>
-                <li>Como você mesmo sem poder sempre esta tentando ajudar os outros ate aqueles que não ligam pra você</li>
-                <li>Entender que amor não é so aquele sentimento que temos pela pessoa, amor tem e dedicar o mizero tempo do seu ocupado dia para aquele que você 
-                    ama mesmo sem conseguir, ou fazer algo para ela mesmo que estaja brava por uma atitude isso é amor</li>
-                <li>Você é A pessoa mais incrivel que entrou na minha vida</li>
+                <li>Você me ajuda a melhorar como pessoa, não importa como.</li>
+                <li>Posso contar com você, não importa o que esteja acontecendo.</li>
+                <li>Mesmo eu pisando na bola muitas vezes — e eu entendo isso — você me perdoa e entende que eu vou melhorar por você. Isso é admirável.</li>
+                <li>Como você, mesmo sem poder, sempre tenta ajudar os outros — até aqueles que não ligam pra você.</li>
+                <li>Entender que amor não é só aquele sentimento pela pessoa. Amor está em dedicar o mínimo tempo do seu dia ocupado para quem você ama, mesmo sem conseguir. Ou fazer algo para ela mesmo estando brava por alguma atitude. Isso é amor.</li>
+                <li>Você é a pessoa mais incrível que entrou na minha vida.</li>
             </ul>
         </section>
 
@@ -153,18 +157,18 @@
             <h2>Minha Carta Para Você</h2>
             <p>Meu amor, aqui estão algumas palavras do meu coração...</p>
             <div class="carta-texto">
-                <p>Amor eu nem sei oq posso dizer aqui, você é incrivel em todos os sentidos, namorada, amiga, ajudante posso citar coisas que você faz ou é ou ajuda a ser por horas, mas nesse cingelo texto eu apenas quero
-                    demonstrar o quanto você é especial para mim, o quanto eu amo você e o quanto eu quero passar o resto da minha vida ao seu lado, mesmo que as vezes eu erre ou pise na bola com você e tudo que eu posso fazer ali é pedir desculpas pra você e nao fazerr merda denovo
+                <p>Amor eu nem sei o que posso dizer aqui, você é incrivel em todos os sentidos, namorada, amiga, ajudante posso citar coisas que você faz ou é ou ajuda a ser por horas, mas nesse singelo texto eu apenas quero
+                    demonstrar o quanto você é especial para mim, o quanto eu amo você e o quanto eu quero passar o resto da minha vida ao seu lado, mesmo que as vezes eu erre ou pise na bola com você e tudo que eu posso fazer ali é pedir desculpas pra você e nao fazer merda de novo
                 eu sempre vou mudar por você, nao quero perder o bem mais precioso da minha vida que é VOCÊ ISABELA CARDOSO LEMOS, você é a mulher que eu vou morar junto, mulher que vai dormir a meu lado todos  os dias
-            a mulher que sempre vou poder contar, nâo importa o que aconteca, você sempre vai estar la por mim e conserteza eu faria o mesmo por você, eu confio todas as decisões da minha vida na sua mão por que eu sei que não importa o que você escolha vai ser o mnelhor pra mim.</p>
+            a mulher que sempre vou poder contar, nâo importa o que aconteca, você sempre vai estar la por mim e com certeza eu faria o mesmo por você, eu confio todas as decisões da minha vida na sua mão por que eu sei que não importa o que você escolha vai ser o mnelhor pra mim.</p>
                 </p>
-                <p>Não importa o que estaja acontecendo na sua casa, não importa oq falem da gente eu nunca vou me sentir desconfortavel ou obrigado a ir para ai, se eu tiver do seu lado eu vou ate o inferno porque com você me sinto seguro, OBRIGADO por ser essa mulher incrivel que você.</p>
+                <p>Não importa o que esteja acontecendo na sua casa, não importa o que falem da gente eu nunca vou me sentir desconfortavel ou obrigado a ir para ai, se eu tiver do seu lado eu vou ate o inferno porque com você me sinto seguro, OBRIGADO por ser essa mulher incrivel que você.</p>
                 <p>Você é esforçada, inteligente, busca o que você quer sem passar em cima de ninguem, sem humilhar ninguem para isso, você pode ter indecisoes sobre seu futuro, sempre mudando o curso que quer fazer na faculdade kkkkk, mesmo tendo uma crise de 18 não aceitando sua idade, você pode vir a minha pedir ajuda na sua vida eu sempre vou estar aqui,
                     eu te amo muito muito muito muito muito muito muito muito muito muito ISABELA CARDOSO LEMOS.
                 </p>
                 <H1>OBRIGADO</H1>
                 <p>Com todo o meu amor,</p>
-                <p>Caio - O Melhor Namorado que você poderia achar (nao tem outra opç)</p>
+                <p>Caio - O Melhor Namorado que você poderia achar (não tem outra opção)</p>
             </div>
         </section>
 
